--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h3>Hola</h3>
+    <p>Saludos desde el balcón</p>
     <h1>Somos los mejores Repe 2</h1>
 	<br/><hr/>
     <p>
